<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BluetoothDeviceConnectionDemo</string>
    <string name="action_settings">Settings</string>
    <string name="Text">Status: -</string>
    <string name="on">Turn On</string>
    <string name="off">Turn Off</string>
    <string name="List">List paired Devices</string>
    <string name="Find">Search Sensor</string>
    <string name="start_training">Start Training</string>
    <string name="stop_training">Stop Training</string>
    
    <string name="speed_label">Speed:</string>
    <string name="force_label">Force:</string>
    <string name="punch_type">Punch Type:</string>
    <string name="sensor_id_text">Sensor Id:</string>
    <string name="sensor_id_value">0017E960E7A8</string>
    <string name="training_data_details">Training Details:</string>

</resources>
