<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:gravity="center"
    tools:context=".StartTrainingActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:focusable="true"
        android:orientation="vertical" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="10" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/sensor_id_text"
                android:paddingLeft="10dp"
                android:gravity="left|center_vertical"
                android:textColor="@color/title_text_color"
                android:textSize="@dimen/mmaglove_device_list_text_view_text_size" />

            <EditText
                android:id="@+id/sensorNameId"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="left|center_vertical"
                android:layout_weight="6"
                android:background="@color/caldroid_transparent"
                android:text="@string/sensor_id_value"
                android:textColor="@color/white"
                android:textSize="@dimen/sensor_text_size"
                tools:ignore="TextFields" />

        </LinearLayout>
        
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/separator"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/startTraining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/share_btn_selector"
                android:gravity="center"
                android:text="@string/start_training"
                android:textColor="@color/white" />
            
            <Button
                android:id="@+id/stopTraining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/share_btn_selector"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/stop_training"
                android:textColor="@color/white" />
        </LinearLayout>
        
    </LinearLayout>

</RelativeLayout>