<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="9.4"
            android:gravity="center"
            android:text="@string/training_data_details"
            android:textColor="@color/registration_subtitle_text_color"
            android:textSize="@dimen/registration_subtitle_text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/separator" />
    
    <LinearLayout
        android:id="@+id/speed_force_label_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4.5"
            android:background="@color/caldroid_transparent"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/speed_label"
            android:textColor="@color/content_text_color"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/speed_value_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:background="@color/caldroid_transparent"
            android:gravity="left|center_vertical"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/separator" />

    <LinearLayout
        android:id="@+id/speed_force_value_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:background="@color/caldroid_transparent"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/force_label"
            android:textColor="@color/content_text_color"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/force_value_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:background="@color/caldroid_transparent"
            android:gravity="left|center_vertical"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/separator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:background="@color/caldroid_transparent"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/punch_type"
            android:textColor="@color/content_text_color"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/punch_type_value_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:background="@color/caldroid_transparent"
            android:gravity="left|center_vertical"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/separator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10" >

        <Button
            android:id="@+id/stopTrainingDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/share_btn_selector"
            android:gravity="center"
            android:text="@string/stop_training"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>